# SUPER-Fast-Nav

./: .gitignore  README.md  TODO.md  ros-env.bash
.catkin_tools/profiles/default/: devel_collisions.txt
scripts/: build.sh  download-resources.sh  download_assets.sh  install-ardupilot.sh  install-deps.sh  install-mission-planner.sh  install-ros.sh  source-ros-env.sh  start-sitl.sh
src/FAST_LIO/Log/: mat_pre.txt
src/FAST_LIO/config/: mid360.yaml  mid360_sim.yaml
src/FAST_LIO/launch/: mapping_mid360.launch  mapping_mid360_sim.launch
src/FAST_LIO/rviz_cfg/: dash_super_rviz.rviz  dash_super_rviz_v2.rviz
src/SUPER/mission_planner/: CMakeLists.txt
src/arducam/: CMakeLists.txt  package.xml
src/arducam/cameras/: arducam_b0527.yaml
src/arducam/config/: 1280x720.yaml  1920x1080.yaml  3840x2160.yaml  4080x3072.yaml  640x480.yaml  8160x6144.yaml
src/arducam/launch/: arducam_b0527.launch
src/arducam/nodes/: usb_cam_node.cpp
src/arducam/rviz/: camera_view.rviz
src/arducam/scripts/: add-to-sudoers.sh  reset-camera.sh
src/arducam/srv/: CaptureStill.srv
src/fast_lio/Log/: mat_pre.txt
src/fast_lio/rviz_cfg/: dash_super_rviz_v3.rviz
src/iq_sim/: CMakeLists.txt
src/iq_sim/config/: iris_super.param
src/iq_sim/launch/: apm.launch  apm_config_iris.yaml  apm_sim.launch  dash_runway.launch  livox_runway.launch  lucas_runway.launch  mavros_node.launch  s500.launch
src/iq_sim/scripts/: camera_still_rc.py  fastlio_to_mavros_viso.py  goal_controller.py  goal_controller_old.py  goal_controller_v1.py  goal_controller_v2.py  goal_generator.py  gps_goal_move_base.py  point_cloud_mount_filter.py  point_cloud_mount_filter_livox.py  point_cloud_transformer.py  rc_bridge.py  rc_controller.py  save_waypoint.py  save_waypoint_rc.py  send_goal.py  send_goal_2.py  send_waypoint.py  send_waypoint_mp.py  send_waypoint_v2.py  super_to_mavros.py  super_to_mavros_v2.py  talker.py  transform_utils.py  turn_to_yaw.py
src/iq_sim/urdf/: dash_iris.urdf.xacro  drone.urdf  drone_with_camera.urdf  final_bm2.urdf.xacro  final_iris.urdf  final_iris.urdf.xacro  final_iris_livox.urdf.xacro  final_iris_livox_test.urdf.xacro  iris_base.xacro  online_iris.urdf.xacro  s500_dummy.urdf.xacro
src/iq_sim/worlds/: forest_trees_plot.world  palm_oil_estate.world  simple_palm_estate.sdf  simple_palm_oil_estate.sdf
src/livox_laser_simulation/meshes/: livox_mid-360-90x.dae
src/livox_laser_simulation/worlds/: pattern_test.dae
src/livox_ros_driver2/: CMakeLists.txt
src/livox_ros_driver2/config/: MID360_config.json
(+20 files in other folders)
